--- a/sources/AssemblyVisualizer/Properties/Resources.resx
+++ b/sources/AssemblyVisualizer/Properties/Resources.resx
@@ -129,11 +129,17 @@
   <data name="BackToSearch" xml:space="preserve">
     <value>Back to Search</value>
   </data>
+  <data name="Browse" xml:space="preserve">
+    <value>Browse</value>
+  </data>
   <data name="CannotNavigateBack" xml:space="preserve">
     <value>Cannot navigate back</value>
   </data>
   <data name="CannotNavigateForward" xml:space="preserve">
     <value>Cannot navigate forward</value>
+  </data>
+  <data name="ClearSelection" xml:space="preserve">
+    <value>Clear selection</value>
   </data>
   <data name="CollapseAll" xml:space="preserve">
     <value>Collapse all</value>
