Interaction Browser: Shown members count in type selection view

--- a/sources/AssemblyVisualizer/Properties/Resources.resx
+++ b/sources/AssemblyVisualizer/Properties/Resources.resx
@@ -202,7 +202,7 @@
     <value>Search in Graph</value>
   </data>
   <data name="SelectTypes" xml:space="preserve">
-    <value>Select Types</value>
+    <value>Types</value>
   </data>
   <data name="SortBy" xml:space="preserve">
     <value>Sort by</value>
